frame/support/test/tests/derive_no_bound_ui/debug.rs
trait Trait {
	type C;
}

#[derive(frame_support::DebugNoBound)]
struct Foo<T: Trait> {
	c: T::C,
}

fn main() {}
